--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -6,6 +6,14 @@
   annotation = {00000}
 }
 
+@techreport{alstadsaeter_global_2024,
+  title = {Global {{Tax Evasion}} Report},
+  author = {Alstads{\ae}ter, Annette and Godar, Sarah and Nicolaides, Panayiotis and Zucman, Gabriel},
+  year = {2024},
+  institution = {EU Tax Observatory},
+  url = {https://www.taxobservatory.eu//www-site/uploads/2023/10/global\_tax\_evasion\_report\_24.pdf}
+}
+
 @article{alvaredo_methods_2021,
   title = {Methods and {{Concepts Used}} in the {{World Inequality Database}}},
   author = {Alvaredo, Facundo and Atkinson, Anthony B and Bauluz, Luis and {Fisher-Post}, Matthew and Blanchet, Thomas and Chancel, Lucas and Flores, Ignacio and Morgan, Marc and Garbinti, Bertrand and {Goupille-Lebret}, Jonathan and {Mart{\'i}nez-Toledano}, Clara and Neef, Theresa and Piketty, Thomas and Robilliard, Anne-Sophie and Saez, Emmanuel and Yang, Li and Zucman, Gabriel},
@@ -639,6 +647,19 @@
   url = {https://doi.org/10.1093/oxrep/grz015}
 }
 
+@article{milanovic_three_2024,
+  title = {The Three Eras of Global Inequality, 1820--2020 with the Focus on the Past Thirty Years},
+  author = {Milanovic, Branko},
+  year = {2024},
+  month = may,
+  journal = {World Development},
+  volume = {177},
+  pages = {106516},
+  issn = {0305750X},
+  doi = {10.1016/j.worlddev.2023.106516},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0305750X23003340}
+}
+
 @article{moatsos_global_2016,
   title = {Global {{Absolute Poverty}}: {{Behind}} the {{Veil}} of {{Dollars}}},
   shorttitle = {Global {{Absolute Poverty}}},
@@ -920,13 +941,6 @@
   issn = {1356-3467},
   doi = {10.1080/13563467.2023.2217087},
   url = {https://doi.org/10.1080/13563467.2023.2217087}
-}
-
-@techreport{tax_observatory_global_2024,
-  title = {Global {{Tax Evasion}} Report},
-  author = {Tax Observatory, {\relax EU}},
-  year = {2024},
-  url = {https://www.taxobservatory.eu//www-site/uploads/2023/10/global\_tax\_evasion\_report\_24.pdf}
 }
 
 @techreport{un_sustainable_2022,
