--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -1,5 +1,4 @@
 % TODO! appendix with WID cainc data
-% TODO cite Sullivan et al 2023
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% NATURE CLIMATE CHANGE FORMAT %%%%%
@@ -255,7 +254,7 @@ Consistently with \cite{ravallion_poorer_2010}, \cite{hoy_gasoline_2016} find th
 The paper also relates to estimates of future poverty rates based on growth alone. Using GDP projections from the IMF, \cite{karver_mdgs_2012} project the 2030 extreme poverty rate at 2.8\% (and at 4.1\% if growth is 1\% lower than projected, the error historically observed with IMF projections). Other studies are more pessimistic, at 3--7\% \citep{chandy_final_2013,bicaba_can_2017}, 4.7\% \citep{manuel_financing_2018} or even 7.4\% for post-COVID estimates \citep{lakner_how_2022}. 
 % Lit on future poverty rate: Karver et al. (12): IMF proj - 1pp, Chandy et al. (13) EIU - 10%, Bicaba et al. (17) EIU - 10%, Lakner et al. (22): Reducing each country’s Gini index by 1% per year has a larger impact on global poverty than increasing each country’s annual growth 1 percentage point above forecasts; on future global income distrib, Hellebrandt & Mauro (15): IMF proj and one sensitivity analysis with 0.84+0.35*(past growth)
 
-The paper is linked to the literature that estimates the global income distribution \citep{pinkovskiy_parametric_2009,anand_chapter_2015,lahoti_global_2016,lakner_global_2016,gradin_trends_2021,jorda_global_2019,alvaredo_methods_2021}. 
+The paper is linked to the literature that estimates the global income distribution \citep{pinkovskiy_parametric_2009,anand_chapter_2015,lahoti_global_2016,lakner_global_2016,gradin_trends_2021,jorda_global_2019,alvaredo_methods_2021,milanovic_three_2024}. 
 % I prefer PIP to alternatives because the GCIP database has been discontinued;\cite{lahoti_global_2016} WIID adjusts its data to GDP (while HFCE is more relevant to us);\cite{gradin_trends_2021} WID has only wide coverage for post-tax national income (diinc) rather than post-tax disposable income (cainc, without public spending).\cite{alvaredo_methods_2021} % TODO? include?
 % Lit on global income distr: Cite GCIP (Lahoti et al., 16), WIID (Gradín, 21) and WID as alternative sources
 % # Cite Lakner & Milanovic (16): on HFCE adjustment, Anand & Segal (15) on estimating global income distribution: "Between-country inequality is the larger component of global inequality, comprising 64–81% of overall inequality"; and Pinkovskiy & Sala-i-Martin (09), Jordá & Niño-Zarazúa (19) on parametric estimates of global distribution. => TODO? cite in some sentences for the HFCE adjustment?
@@ -405,17 +404,17 @@ A final way of approaching the issue is to set a tax schedule, compute how much 
 and the tax rate too low for top incomes, 
 this simple tax schedule seems to correctly reflect the fiscal capacity of governments. Note that the value of the income floor depends on the whole income distribution: the top of the distribution determines the revenues that can be generated; and the bottom dictates the cost of raising low incomes up to a given floor. 
 
+Figure \ref{fig:demogrant_7__10} presents the income floor that can funded in 2030 with our simple tax in a 3\% growth scenario. While the number of countries unable to eradicate extreme poverty through this tax totals 23, a figure akin to the count of low-income countries at 27, a mere 13 countries fall into both categories.
+%Although there are about as many countries that cannot close the extreme poverty gap with this tax (23) as there are low-income countries (27), only 13 countries fall into both of these groups. 
+For example, while Ethiopia (a low-income country) can finance an income floor of \$3.08/day, Nigeria (classified as a lower-middle-income country) can only finance a floor of \$1.83/day. 
+
 % - would have worked well if it had been 7\% since 2016
-\begin{figure}[b!]
+\begin{figure}[t!]
   \caption[Income floor of 10\% tax above \$6.85/day in 2030 after 3\% growth.]{Income floor that can be funded with a 10\% marginal tax on income above \$6.85/day (in 2017 PPP \$/day). In this idealized policy, all tax revenue is transferred to the poorest and lift them at the income floor, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
   }\label{fig:demogrant_7__10}
   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
   {../figures/demogrant_7__10.pdf}}
 \end{figure}
-
-Figure \ref{fig:demogrant_7__10} presents the income floor that can funded in 2030 with our simple tax in a 3\% growth scenario. While the number of countries unable to eradicate extreme poverty through this tax totals 23, a figure akin to the count of low-income countries at 27, a mere 13 countries fall into both categories.
-%Although there are about as many countries that cannot close the extreme poverty gap with this tax (23) as there are low-income countries (27), only 13 countries fall into both of these groups. 
-For example, while Ethiopia (a low-income country) can finance an income floor of \$3.08/day, Nigeria (classified as a lower-middle-income country) can only finance a floor of \$1.83/day. 
 
 Even in a scenario with 7\% growth from 2023 onwards, 10 countries have an income floor below \$2.15 in 2030. Note that the picture does not significantly change when adjusting top incomes so that aggregate consumption matches national accounts: % \citep{deaton_measuring_2005,prydz_disparities_2022}: 
 8 countries are still unable to close the extreme poverty gap despite very optimistic growth in this robustness check. In contrast, if the 7\% growth had started in 2016 (as the SDGs were set up), the 10\% tax would have been sufficient to eliminate extreme poverty in all countries except in Madagascar, where a tax of 23\% would have been required.
@@ -458,7 +457,7 @@ These rates are expressed on top of the current tax system and apply to post-tax
 % top 1%: 1M
 
 % Although the idea of an internationally redistributive tax may seem far-fetched, 
-Although internationally redistributive taxes have yet to take off, the proposal of a global wealth tax is gaining momentum \citep{piketty_brief_2022}. A 2\% tax on individual net wealth above \$1 billion would raise \$214 billion a year, slightly more than the global extreme poverty gap \citep{tax_observatory_global_2024}. Moreover, a global tax on the wealthiest 1\% can raise enough revenues to close the global acute poverty gap and lift everyone above \$6.85/day. For example, the \href{https://wid.world/world-wealth-tax-simulator}{WID wealth tax simulator} shows that a tax consisting of a 4\% marginal rate above \$1 million and 10\% above \$100 million would raise 4.4\% of the global GDP. More generally, a global tax on millionaires designed to be revenue-maximing in the long-run has the potential to finance the eradication of acute poverty. 
+Although internationally redistributive taxes have yet to take off, the proposal of a global wealth tax is gaining momentum \citep{piketty_brief_2022}. A 2\% tax on individual net wealth above \$1 billion would raise \$214 billion a year, slightly more than the global extreme poverty gap \citep{alstadsaeter_global_2024}. Moreover, a global tax on the wealthiest 1\% can raise enough revenues to close the global acute poverty gap and lift everyone above \$6.85/day. For example, the \href{https://wid.world/world-wealth-tax-simulator}{WID wealth tax simulator} shows that a tax consisting of a 4\% marginal rate above \$1 million and 10\% above \$100 million would raise 4.4\% of the global GDP. More generally, a global tax on millionaires designed to be revenue-maximing in the long-run has the potential to finance the eradication of acute poverty. 
 
 In a nutshell, whereas poverty alleviation cannot be achieved rapidly without international solidarity, it can be financed by reasonable contributions from the global top 1\%.
 % - One example of global redistribution (incl. largest recipients/contributors)
@@ -474,8 +473,8 @@ To be fair, this paper only presents the orders of magnitude of global inequalit
 In practice, structural factors that sustain poverty (like wars or corruption) %, corruption, or deficient administrative capacity). 
 can also hamper the effectiveness of international action. %research can help design % uncovering?
 % TODO! put back
-% While concrete policy proposals have the potential % If... are the way
-% to mobilize international solidarity \citep{fabre_international_2023}, research can help design effective policies to distribute resources to the poorest.
+While concrete policy proposals have the potential % If... are the way
+to mobilize international solidarity \citep{fabre_international_2023}, research can help design effective policies to distribute resources to the poorest.
 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
 % # World Bank (2022): "It became clear that the global goal of ending extreme poverty by 2030 would not be achieved."
