redistribution => reduction in inequality / internal => domestic

--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -205,9 +205,9 @@
 % \begin{small} % NCCcomment
 \begin{abstract}
 % 144/150 words
-In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7\% between 2022 and 2030, 3\% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of \textit{antipoverty cap} or \textit{antipoverty tax} required to finance poverty eradication, and \textit{income floor} (financed by a given income tax). With credible annual growth of 3\%, even capping incomes at \$7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical internal redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14\% of global income could achieve this goal.
+In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without a reduction in inequality, even with a very optimistic annual growth rate of 7\% between 2022 and 2030, 3\% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of \textit{antipoverty cap} or \textit{antipoverty tax} required to finance poverty eradication, and \textit{income floor} (financed by a given income tax). With credible annual growth of 3\%, even capping incomes at \$7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical domestic redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14\% of global income could achieve this goal.
 \end{abstract}
-% In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7% between 2022 and 2030, 3% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of antipoverty cap or antipoverty tax required to finance poverty eradication, and income floor (financed by a given income tax). With credible annual growth of 3%, even capping incomes at $7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical internal redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14% of global income could achieve this goal.
+% In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7% between 2022 and 2030, 3% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of antipoverty cap or antipoverty tax required to finance poverty eradication, and income floor (financed by a given income tax). With credible annual growth of 3%, even capping incomes at $7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical domestic redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14% of global income could achieve this goal.
 
 % \textbf{JEL codes:} D63, I32, P16.
 % \textbf{Keywords:} Domestic resource mobilization, Poverty gap, Fiscal capacity, Sustainable Development Goals, Redistribution, Extreme poverty.
@@ -355,7 +355,7 @@ In most of the paper, I focus on the definition of extreme poverty employed in t
 First, this poverty line %is too low to procure just a healthy diet, it is 
 is barely sufficient to satisfy one's caloric requirements and is too low to procure a healthy diet or non-food necessities. 
 Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of an average consumption basket rather than on prices of subsistence goods \citep{sullivan_capitalist_2023}. Therefore, the cost of a subsistence diet varies across countries. For instance, \cite{moatsos_global_2016} computes that it is \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$). Buidling on earlier work by \cite{allen_absolute_2017} that addresses these issues, \cite{moatsos_global_2016} computes a country-specific poverty line. This basic consumption (or \textit{BCS}) poverty line corresponds to the local price of the cheapest diet that meets caloric and protein requirements, completed with a ration of fat, sugar, and basic non-food requirements (see also \citealp{moatsos_global_2021}). This alternative measure indicates that poverty % destitution? % On definitions of poverty, cite: Woodward & Abdallah (10) - no data but based on infant mortality rate, Pritchett (06) - 15$ based on HIC poverty lines, Edward (06) - 7$ based on kink in relation between GDP and life expectancy
-is more prevalent than the official poverty line suggests. Despite missing data in many countries (including India and the D.R.C.), 14 countries have an average consumption level below this basic consumption poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient domestic resources to lift their population above the BCS poverty line, equal to \$4.35/day in median, even after extreme internal redistribution. 
+is more prevalent than the official poverty line suggests. Despite missing data in many countries (including India and the D.R.C.), 14 countries have an average consumption level below this basic consumption poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient resources to lift their population above the BCS poverty line, equal to \$4.35/day in median, even after extreme domestic redistribution. 
 % - Even worse when considering Moatsos' BCS line
 
 BCL found that 62 countries could not eradicate severe poverty (defined as \$$_\text{2005}$2/day) with an antipoverty cap at \$$_\text{2005}$13/day, while 27 could not even do so with a cap at \$$_\text{2005}$2/day. 
@@ -465,7 +465,7 @@ In a nutshell, whereas poverty alleviation cannot be achieved rapidly without in
 
 \section{Discussion} 
 
-To paraphrase the \cite{un_sustainable_2022}, ``as things stand, the world is not on track to end poverty by 2030.'' I have shown that the only prospect for low-income countries to eliminate extreme poverty on their own is the combination of strong growth, ambitious policies of social programs and internal redistribution, and time. 
+To paraphrase the \cite{un_sustainable_2022}, ``as things stand, the world is not on track to end poverty by 2030.'' I have shown that the only prospect for low-income countries to eliminate extreme poverty on their own is the combination of strong growth, ambitious policies of social programs and domestic redistribution, and time. 
 With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer now than China in 1990, % https://data.worldbank.org/indicator/SI.POV.DDAY?locations=CD-CN-AE, https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD?locations=ET-CN-CD
 so even if it reproduces the Chinese miracle, it will not be able to eradicate extreme poverty on its own before 2055. 
 In contrast, international solidarity could end poverty more quickly and at a much lower welfare cost. In this paper, I have illustrated the magnitude of the required transfer of resources with idealized international taxes, but in reality this could take other forms such as a systemic change in the rules or structures of the world economy. 
@@ -479,7 +479,7 @@ to mobilize international solidarity \citep{fabre_international_2023}, research 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
 % # World Bank (2022): "It became clear that the global goal of ending extreme poverty by 2030 would not be achieved."
 % Paper shows that extreme poverty will not be eradicated in 2030 unless international transfers. 
-% Even in the longer term, only strong growth + strong internal redistribution + time can allow countries to eliminate extreme poverty on their own (cite the time that China took: DRC lower GDPpc and higher extreme poverty rate than China in 90). 
+% Even in the longer term, only strong growth + strong domestic redistribution + time can allow countries to eliminate extreme poverty on their own (cite the time that China took: DRC lower GDPpc and higher extreme poverty rate than China in 90). 
 % In contrast, international transfers might solve the issue more quickly and at a much lower welfare cost. 
 % However, this paper only arithmetics, poverty is multidimensional and sustained structural factors (wars, corruption, deficient administrative capacity). These factors can hamper the effectiveness of international transfers. More research needed to study concrete policies on how to distribute resources to the poorest.
 
