--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -6,6 +6,14 @@
   annotation = {00000}
 }
 
+@techreport{alstadsaeter_global_2024,
+  title = {Global {{Tax Evasion}} Report},
+  author = {Alstads{\ae}ter, Annette and Godar, Sarah and Nicolaides, Panayiotis and Zucman, Gabriel},
+  year = {2024},
+  institution = {EU Tax Observatory},
+  url = {https://www.taxobservatory.eu//www-site/uploads/2023/10/global\_tax\_evasion\_report\_24.pdf}
+}
+
 @article{alvaredo_methods_2021,
   title = {Methods and {{Concepts Used}} in the {{World Inequality Database}}},
   author = {Alvaredo, Facundo and Atkinson, Anthony B and Bauluz, Luis and {Fisher-Post}, Matthew and Blanchet, Thomas and Chancel, Lucas and Flores, Ignacio and Morgan, Marc and Garbinti, Bertrand and {Goupille-Lebret}, Jonathan and {Mart{\'i}nez-Toledano}, Clara and Neef, Theresa and Piketty, Thomas and Robilliard, Anne-Sophie and Saez, Emmanuel and Yang, Li and Zucman, Gabriel},
@@ -326,20 +334,6 @@
 }
 
 @techreport{gradin_wiid_2021-1,
-<<<<<<< HEAD
-=======
-  title = {{{WIID Companion}} ({{March}} 2021): Data Selection},
-  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
-  author = {Grad{\'i}n, Carlos},
-  year = {2021},
-  month = mar,
-  institution = {UNU-WIDER},
-  doi = {10.35188/UNU-WIDER/WTN/2021-4},
-  url = {https://www.wider.unu.edu/node/238513}
-}
-
-@techreport{gradin_wiid_2021-2,
->>>>>>> origin/main
   title = {{{WIID Companion}} ({{March}} 2021): Integrated and Standardized Series},
   shorttitle = {{{WIID Companion}} ({{March}} 2021)},
   author = {Grad{\'i}n, Carlos},
@@ -947,13 +941,6 @@
   issn = {1356-3467},
   doi = {10.1080/13563467.2023.2217087},
   url = {https://doi.org/10.1080/13563467.2023.2217087}
-}
-
-@techreport{tax_observatory_global_2024,
-  title = {Global {{Tax Evasion}} Report},
-  author = {Tax Observatory, {\relax EU}},
-  year = {2024},
-  url = {https://www.taxobservatory.eu//www-site/uploads/2023/10/global\_tax\_evasion\_report\_24.pdf}
 }
 
 @techreport{un_sustainable_2022,
