--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -1,5 +1,5 @@
 % TODO! appendix with WID cainc data
-
+% 4400 words
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% NATURE CLIMATE CHANGE FORMAT %%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -473,8 +473,8 @@ To be fair, this paper only presents the orders of magnitude of global inequalit
 In practice, structural factors that sustain poverty (like wars or corruption) %, corruption, or deficient administrative capacity). 
 can also hamper the effectiveness of international action. %research can help design % uncovering?
 % TODO! put back
-While concrete policy proposals have the potential % If... are the way
-to mobilize international solidarity \citep{fabre_international_2023}, research can help design effective policies to distribute resources to the poorest.
+% While concrete policy proposals have the potential % If... are the way
+% to mobilize international solidarity \citep{fabre_international_2023}, research can help design effective policies to distribute resources to the poorest.
 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
 % # World Bank (2022): "It became clear that the global goal of ending extreme poverty by 2030 would not be achieved."
@@ -513,7 +513,7 @@ All data and code of as well as figures of the paper are available on \href{http
 %% Use \item's to separate, default label is "Acknowledgements"
 % \begin{addendum} % 177 words
 \begin{itemize}
- \item[Acknowledgments] I am grateful to Michalis Moatsos for his help in using his data. I thank Lidia Ceriani for providing her data. I thank Thomas Goumont and Elise Thai for research assistance. 
+%  \item[Acknowledgments] I am grateful to Michalis Moatsos for his help in using his data. I thank Lidia Ceriani for providing her data. I thank Thomas Goumont and Elise Thai for research assistance. 
 %  \item[Competing Interests] I declare that I also serve as president of Global Redistribution Advocates.
 \item[JEL codes] D63, I32, P16.
 \item[Keywords]  Poverty gap, Sustainable Development Goals, Domestic resource mobilization, Redistribution, Fiscal capacity, Extreme poverty.
