--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -187,7 +187,7 @@
 \title{Shortfall of Domestic Resources\\ to Eradicate Extreme Poverty by 2030} 
 
 % \author{Adrien Fabre$^{1,2}$} % WPcomment
-\author{Adrien Fabre\footnote{CNRS, CIRED. E-mail: adrien.fabre@cnrs.fr.}}
+%\author{Adrien Fabre\footnote{CNRS, CIRED. E-mail: adrien.fabre@cnrs.fr.}}
 % I thank Michalis Moatsos for his help in using his data. I thank Thomas Goumont and Elise Thai for assistance. I declare that I also serve as president of Global Redistribution Advocates.} % NCCcomment 
 
 \date{\today} % NCCcomment
