--- a/paper/riw.tex
+++ b/paper/riw.tex
@@ -88,7 +88,7 @@
 
 \title{Shortfall of Domestic Resources\\ to Eradicate Extreme Poverty by 2030} 
 
-\author{Adrien Fabre\footnote{CNRS, CIRED. E-mail: adrien.fabre@cnrs.fr.}}
+% \author{Adrien Fabre\footnote{CNRS, CIRED. E-mail: adrien.fabre@cnrs.fr.}}
 
 \date{\today} %
 
