--- a/presentation/poverty_prez.tex
+++ b/presentation/poverty_prez.tex
@@ -73,9 +73,8 @@
     \bbvsp
     % \ip Antipoverty tax are used to measure domestic capacity to eradicate poverty since Ravallion (2010) and Ceriani \& Verme (2014).
     \ip Ravallion (2010): a 100\% tax above the U.S. poverty line insufficient to eradicate extreme poverty in 29 countries.
-    \ip \rose{Bolch, Ceriani \& López-Calva (2022)} (BCL): \blue{a 100\% above the U.S. poverty line insufficient to eradicate \textit{severe} poverty in 62 countries}.
-    \ip $\Rightarrow$ 3 contributions w.r.t. BCL: updated data; growth projection; use pf official (\textit{extreme}) poverty line.
-    \ip Hoy \& Summer (2016): countries with GDP p.c. < \$2,000 can't eradicate extreme poverty (with 50\% tax above \$10/day).
+    \ip \rose{Bolch, Ceriani \& López-Calva (2022)} (BCL): \blue{a 100\% tax above the U.S. poverty line insufficient to eradicate \textit{severe} poverty in 62 countries}.
+    \ip Hoy \& Summer (2016): countries with GDP p.c. $<$ \$2,000 can't eradicate extreme poverty (with 50\% tax above \$10/day).
     \ip Woodward (2015): with growth alone, it would take >100 years to end extreme poverty. 
     \ip \blue{In 24 countries, 7\% growth would not suffice to end extreme poverty by 2030} (UNCTAD, 2023).
     \ip Extreme poverty in 2030 projected at from 2.8\% (Karver et al., 2012), 3--7\% (Bicaba et al., 2017; Chandy et al., 2013), 4.7\% (Manuel et al., 2018) to 7.4\% (Lakner et al., 2022).
@@ -83,9 +82,17 @@
     \ee
 \end{frame}
 
-\begin{frame}{Primer of the results}
+\begin{frame}{Primer of the results: comparison with BCL}
     \bbsp
-    \ip 
+    \ip $\Rightarrow$ 3 contributions w.r.t. BCL: 
+    \bbsp \ip updated data
+    \ip growth projection
+    \ip use of official (\textit{extreme}) poverty line
+    \ee
+    \ip \rose{BCL}: \blue{62 countries can't end \$$_\text{2005}$2/day poverty with a cap at \$$_\text{2005}$13/day}; \\ \blue{27} can't even with cap at \blue{\$$_\text{2005}$2}/day.
+    \ip Results not reproducible with 2017 PPPs as new prices alter income distribution.
+    \ip \rose{Replicating BCL}: \blue{52} countries can't end \$3.44/day poverty with a cap at \$22.36/day; \\ \blue{30} can't with cap at \$3.44/day.
+    \ip \blue{In 2030} after 3\% growth: figures go down to \blue{34} and \blue{6} countries.
     \ee
 \end{frame}
 
@@ -93,12 +100,12 @@
     \bbsp
     \ip I use the \blue{Poverty and Inequality Platform} (PIP) of the World Bank. 
     \ip PIP aggregates most recent household surveys (60\% countries surveyed over 2018--21).
-    \ip Data in PPP 2017 \$.
-    \ip Provides percentiles of consumption (or of post-tax income in HICs).
+    \ip Data \blue{in PPP} 2017 \$.
+    \ip Provides percentiles of \rose{consumption} (or of post-tax income in HICs).
     \ip Pb: Doesn't capture services procured by government.
-    \ip Pb: Aggregate consumption below HFCE from national accounts (Deaton, 05; Prudz et al., 22). \\ Underreporting of top incomes and large expenditures in HH surveys; agricultural output inflated in national accounts (Angrist et al., 2021), authoritarian countries inflate GDP (Martínez, 2022).
-    \ip HFCE is 44\% greater than aggregate consumption overall, discrepancy only 12\% in LICs.
-    \ip As robustness check, I impute extra consumption in HFCE to top percentile (as Lakner \& Milanovic, 2015; Anand \& Segal, 2015).
+    \ip Pb: \blue{Aggregate consumption below HFCE from national accounts} (Deaton, 05; Prudz et al., 22). \\ Underreporting of top incomes and large expenditures in HH surveys; agricultural output inflated in national accounts (Angrist et al., 2021), autocracies inflate GDP (Martínez, 2022).
+    \ip HFCE is 44\% greater than aggregate consumption overall, \blue{discrepancy only 12\% in LICs}.
+    \ip $\Rightarrow$ As robustness check, I impute extra consumption in HFCE to top percentile (as Lakner \& Milanovic, 2015; Anand \& Segal, 2015).
     \ee
 \end{frame}
 
@@ -119,7 +126,7 @@
 \begin{frame}{The effects of balanced growth}
     \input{../tables/poverty.tex}
     \pause
-    Among the 8 countries < \$3/day; 2014--19 growth on average negative, highest growing rate at 2.4\%.
+    Among the 8 countries $<$ \$3/day; 2014--19 growth on average negative, highest growing rate at 2.4\%.
     $\Rightarrow$ My benchmark of 3\% growth over 2022--30 is optimistic.
 \end{frame}
 
@@ -131,18 +138,29 @@
       \end{figure} 
 \end{frame}
 
-\begin{frame}{Antipoverty caps}    % TODO: 3.3
+\begin{frame}{Antipoverty caps}   
     \bbsp 
-    \ip In 5 countries, capping incomes at \$7/day wouldn't suffice to end extreme poverty in 2030 despite 3\% growth.
-    \ip In Madagascar, average consumption would be \$2.02/day in baseline.
+    \ip \blue{In 5 countries, capping incomes at \$7/day wouldn't suffice to end extreme poverty} in 2030 despite 3\% growth.
+    \ip \rose{In Madagascar, average consumption would be \$2.02/day} in baseline.
     \ip In a very optimistic scenario of 7\% growth, the anti-extreme-poverty cap would be \$14/day in the D.R.C and \$8.60 in Burundi.
     \ee 
 \end{frame}
 
-\begin{frame}{Antipoverty taxes}    
+\begin{frame}{Basic consumption poverty}   
     \bbsp 
-    \ip 
+    \ip \blue{\$2.15/day threshold} criticized as \blue{inaccurate}:
+    \bbsp \ip Barely sufficient for caloric requirements, too low for healthy diet or non-food necessities.
+    \ip PPP adjustments are based on prices of average consumption baseket rather than subsistence goods. 
+   
     \ee 
+    \ip  $\Rightarrow$ Cost of subsistence diet varies, e.g. \$$_\text{2011}$1.44 in Malawi vs. \$$_\text{2011}$4.10 in Kenya (Moatsos, 16).
+    \ip $\Rightarrow$ \rose{Basic consumption poverty line} (BCS): \blue{local price of cheapest diet} that meets caloric and protein requirements \blue{plus} ration of fat, sugar, \blue{basic non-food necessities}.
+    \ip \rose{With BCS} (\$4.35 in median), \rose{poverty more prevalent}: 
+    \\ Despite lot of missing data (e.g. India, D.R.C.), 14 countries' average consumption $<$ BCS in 2030 after 3\% growth (incl. Nigeria).
+    \ee 
+\end{frame}
+
+\begin{frame}{Antipoverty taxes}    
     \begin{figure}
       \caption{Linear tax rate above \blue{\$6.85/day} eradicating extreme poverty (in \%), after a growth of \blue{3\%} over 2022--2030. 
       }
@@ -160,10 +178,10 @@
 
 \begin{frame}{Antipoverty taxes}   
     \bbsp 
-    \ip Ending extreme poverty would require a tax above \$6.85/day of:
+    \ip \blue{Ending extreme poverty would require a tax above \$6.85/day of}:
     \bbvsp \ip 20\% in Nigeria 
      \ip 49\% in Sub-Saharan Africa
-     \ip 70\% in low-income countries
+     \ip \blue{70\% in low-income countries}
      \ee
     \ip Similar rates with a tax above \$18.15/day (U.S. poverty line) after 7\% growth:
     \ip In India, the anti-extreme-poverty tax above \$18.15/day is:
@@ -184,34 +202,34 @@
 
 \begin{frame}{Are growth and domestic mobilization enough?}   
     \bbsp 
-    \ip 23 countries unable to end extreme poverty with the credible tax.
-    \ip Only 13 out of the 27 LICs are among them. % e.g. Ethiopia (LMIC): \$3.1/day vs. Nigeria (LIC): \$1.8/day
-    \ip Even after 7\% growth, 10 countries can't fund a \$2.15 income floor (or 8 with HFCE-adjustment).
-    \ip If 7\% growth started in 2016, the 10\% would have ended extreme poverty in all countries but Madagascar (where a rate of 23\% would have been needed).
+    \ip \rose{23 countries unable to end extreme poverty with the credible tax}.
+    \ip \blue{Only 13 out of the 27 LICs} are among them (e.g. Ethiopia (LMIC): \$3.1 vs. Nigeria (LIC): \$1.8).
+    \ip Even \rose{after 7\% growth, 10} countries can't fund a \$2.15 income floor (or 8 with HFCE-adjustment).
+    \ip If 7\% growth started in 2016, the 10\% tax would have ended extreme poverty in all countries but Madagascar (where a rate of 23\% would have been needed).
     \ip As high growth (SDG 8.1) did not materialize, another option would be increased foreign aid (ODA).
     \ip SDG 17.2: Developed countries implementing their ODA commitment (0.7\% of ODA/GNI, incl. 0.15\% to LDCs).
-    \ip Extreme poverty gap (0.17\% of global real GDP) $\lesssim$ ODA shortfall (0.2\% of global nominal GDP).
+    \ip \rose{Extreme poverty gap} (0.17\% of global real GDP) \rose{$\lesssim$ ODA shortfall} (0.2\% of global nominal GDP).
     \ee 
 \end{frame}
 
 \begin{frame}{The potential of global redistribution}
-    \bbsp \ip If applied in each conutry, the \textit{credible tax} would bring global Gini from .62 to .59, reducing \textit{acute} poverty gap from 4.5\% to 3.7\% of global GDP.
-    \ip If applied at the global level, it would bring global Gini to .51, funding a \$8.6/day income floor.
-    \ip To end extreme poverty, a 1.2\% tax above \$100/day (the top 5\%) would suffice. \\ Would involve 3.4\% of global GDP transferred from rich to poor, but just 0.14\% of global GDP in international transfers.
-    \ip This is an upper bound: once we use HFCE-rescaling, a 0.3\% tax suffices, \\ and a 10\% tax above \$100/day could fund an income floor of \$7/day and end ``poverty in all its forms''.
-    \ip A wealth tax at 4\% above \$1 million and 10\% above \$100 million would raise even more while targeting the top 1\%.
+    \bbsp \ip If \blue{applied in each country}, the \blue{\textit{credible tax}} would bring global Gini from .62 to .59 and \\ \blue{reduce \textit{acute} poverty gap from 4.5\% to 3.7\%} of global GDP.
+    \ip If \blue{applied at the global level}, it would bring global Gini to .51 and \blue{fund a \$8.6/day income floor}.
+    \ip \rose{To end extreme poverty, a 1.2\% tax above \$100/day} (the top 5\%) \rose{would suffice}. \\ Would involve 3.4\% of global GDP transferred from rich to poor, but just 0.14\% of global GDP in international transfers.
+    \ip This is an upper bound: once we use HFCE-rescaling, a 0.3\% tax suffices, \\ and \rose{a 10\% tax above \$100/day could fund an income floor of \$7/day} and end ``poverty in all its forms''.
+    \ip \blue{A wealth tax} at 4\% above \$1 million and 10\% above \$100 million \blue{would raise even more while targeting the top 1\%}.
     \ee
 \end{frame}
 
 \section{Conclusion}
 
 \begin{frame}{Wrapping up}
-    \bbsp \ip The World is not on track to end poverty by 2030.
-    \ip The lowest income countries don't have the resources to end poverty on their own. % With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer now than China in 1990, so even if it reproduces the Chinese miracle, it will not be able to eradicate extreme poverty on its own before 2055.
+    \bbsp \ip The World is \blue{not on track to end poverty} by 2030.
+    \ip The \rose{lowest income countries don't have the resources to end poverty} on their own. % With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer now than China in 1990, so even if it reproduces the Chinese miracle, it will not be able to eradicate extreme poverty on its own before 2055.
     \ip International solidarity might be able to end poverty more quickly and at a lower welfare cost.
     \ip I illustrated the required extent of change using idealized redistributive policies, but it could take other forms (systemic change in rules or structures of the world economy) and would be hampered with structural factors (like wars or corruption).
     \ip \quad
-    \ip \begin{center} \textbf{Thank you for your attention!} \\ \quad \\  Read paper on SSRN: 4725417, and for more: @adrien\_fabre. \end{center}
+    \ip \begin{center} \textbf{Thank you for your attention!} \\ \quad \\  Read \blue{paper} on \rose{SSRN: 4725417}, and for more: \rose{@adrien\_fabre}. \end{center}
     \ee
 \end{frame}
 
