--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -1,5 +1,6 @@
+% TODO! add schemas for antipoverty tax/caps, global tax distributional effect
 % TODO! appendix with WID cainc data
-% TODO! discuss/use Hlasny & Verme
+% TODO discuss/use Hlasny & Verme
 % TODO discuss Deaton & Dupriez
 % TODO tone down that international transfers can solve poverty
 % TODO clarify that between countries transfers are in nominal (not PPP)
