--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -1,6 +1,7 @@
 % TODO! Appendix max 1k words and detailed results in SM, also code in SM
 % TODO! pages etc. in biblio references, cf. https://files.taylorandfrancis.com/tf_APA6.pdf
 % TODO! footnote => endnote right before references
+% TODO!? Update to 2024 nowcast data? post-covid
 
 % TODO! add schemas for antipoverty tax/caps, global tax distributional effect
 % TODO! appendix with WID cainc data
