--- a/deprecated/JDS_response.tex
+++ b/deprecated/JDS_response.tex
@@ -81,29 +81,27 @@
 
 \textit{Dear Dr. Fabre,}
 
-\textit{I refer to your paper entitled  "Shortfall of Domestic Resources to Eradicate Extreme Poverty by 2030" which you submitted to the Journal of Development Studies, and regret to inform you that we are unable to publish the paper in its present form.}~\\
-
-response
-~\\ ~\\
+\textit{I refer to your paper entitled  "Shortfall of Domestic Resources to Eradicate Extreme Poverty by 2030" which you submitted to the Journal of Development Studies, and regret to inform you that we are unable to publish the paper in its present form.}
 
 \textit{However, should you wish to revise it, taking fully into account the comments made by the referees and providing an explanation of the ways in which they have been dealt with, and justifying those you choose not to address, we would be prepared to consider it again, although you will understand that no undertaking to publish such a version can, at this stage, be made.}~\\
 
-response
-~\\ ~\\
+I am very grateful for the opportunity to revise the paper and I will address all the comments made by the referees. I will provide a detailed response to each comment and explain how I have dealt with them. ~\\
 
-\textit{We would also ask you to do everything possible to make the paper as succinct and short (maximum 8,000 words with as few tables as feasible) as you can. The Appendix is too long.  A brief Appendix (about 1,000 words) may be included with papers to present important detail such as data sources and definitions and perhaps descriptive statistics.  However, detailed material (such as on data construction where this is involved, additional results and sensitivity analysis) should be provided in a separate file as Supplementary Materials, which ideally would also include data and do files (where applicable and presented clearly with annotation to facilitate replication). Supplementary Materials can be provided in any file format and will be deposited in Figshare with a citable DOI linked to the article.}~\\
+\textit{We would also ask you to do everything possible to make the paper as succinct and short (maximum 8,000 words with as few tables as feasible) as you can. The Appendix is too long.  A brief Appendix (about 1,000 words) may be included with papers to present important detail such as data sources and definitions and perhaps descriptive statistics.  % TODO?
+However, detailed material (such as on data construction where this is involved, additional results and sensitivity analysis) should be provided in a separate file as Supplementary Materials, which ideally would also include data and do files (where applicable and presented clearly with annotation to facilitate replication). Supplementary Materials can be provided in any file format and will be deposited in Figshare with a citable DOI linked to the article.}~\\
 
-response
+I kept the paper succinct: the wordcount is now TODO words. I moved the additional results from Appendix to a Supplementary Material. The code is also included as Supplementary Materials. I have deposited the manuscript and Supplementary Materials in Figshare and added a DOI link to the article. TODO 
 ~\\ ~\\
 
 \textit{It is JDS policy that authors of accepted papers should make the data and code available (to bona fide researchers), either in a website or by committing to provide on request.  We would be grateful if you could include a statement in the acknowledgements of how you will make it available.}~\\
 
-response
+For the moment, I have removed the acknowledgements section to respect the double blind review process. However, I have included a Data and code availability section stating that the data and code is freely available on github. It reads as follows: ``All data and code of as well as figures of the paper are available on \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. Many more figures (with varying poverty lines, taxation thresholds, growth scenarios, etc.) are available on the repository. %\href{https://github.com/bixiou/domestic_poverty_eradication/tree/main/figures}{github.com/bixiou/domestic\_poverty\_eradication}. 
+Also, any custom figure can be easily produced using this code.''
 ~\\ ~\\
 
-\textit{Please ensure that your revised version follows our housestyle guides which are available on the site under 'Instructions to Authors'.  Please note that footnotes should appear as endnotes, after the text and before the references.   Pay particular attention to requirements for bibliographic details in references (e.g. include place of publication for books and mimeos, page span for articles and chapters in books).  In addition, please provide the issue number only if each issue of the journal begins on page 1.  In such cases it goes in parentheses:  Journal, 8(1), pp–pp.  Page numbers should always be provided.  Please refer to the following link:   https://www.tandf.co.uk//journals/authors/style/reference/tf_APA6.pdf}~\\
+\textit{Please ensure that your revised version follows our housestyle guides which are available on the site under 'Instructions to Authors'.  Please note that footnotes should appear as endnotes, after the text and before the references.   Pay particular attention to requirements for bibliographic details in references (e.g. include place of publication for books and mimeos, page span for articles and chapters in books).  In addition, please provide the issue number only if each issue of the journal begins on page 1.  In such cases it goes in parentheses:  Journal, 8(1), pp–pp.  Page numbers should always be provided.  Please refer to the following link:   https://www.tandf.co.uk//journals/authors/style/reference/tf\_APA6.pdf}~\\
 
-response
+I have move the footnote as endnote as indicated. 
 ~\\ ~\\
 
 \textit{The revised documents need to be in editable format and as you have submitted your paper in pdf format that is not possible. Please either convert your paper to Word or upload all the source files.}~\\
@@ -117,7 +115,7 @@ response
 ~\\ ~\\
 
 
-\paragraph*{Reviewer #1}
+\paragraph*{Reviewer \#1}
 
 \textit{Summary}
 
@@ -179,7 +177,7 @@ response
 ~\\ ~\\
 
 
-\paragraph*{Reviewer #2}
+\paragraph*{Reviewer \#2}
 
 \textit{This paper examines whether growth and domestic redistribution are sufficient to eradicate extreme poverty by 2030. The authors estimate the parameter of two tax policies that would raise enough revenues to eradicate poverty. In the “antipoverty cap”, the rate is fixed at 100\% to find the required taxation threshold. In the “antipoverty tax”, the threshold is fixed to find the rate needed. In the lowest income countries, extreme poverty is estimated to persist even after strong growth and radical redistribution. The paper concludes by exemplifying international transfers that would eradicate poverty by 2030. }~\\
 
